--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -1,25 +1,35 @@
 html, body {
     width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0;
 }
-
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
+    background-color: #ffffff;
+    margin: 0;
+    overflow: hidden;
+    font-family: arial;
 }
-
-a {
-    text-decoration: none;
+#blocker {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
 }
-
-.container {
+#instructions {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    box-orient: horizontal;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    box-pack: center;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    box-align: center;
+    color: #ffffff;
     text-align: center;
-}
-
-.subtitle {
-    color: gray;
+    cursor: pointer;
 }
