--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -17,19 +17,11 @@ body {
 #instructions {
     width: 100%;
     height: 100%;
-    display: -webkit-box;
-    display: -moz-box;
-    display: box;
-    -webkit-box-orient: horizontal;
-    -moz-box-orient: horizontal;
-    box-orient: horizontal;
-    -webkit-box-pack: center;
-    -moz-box-pack: center;
-    box-pack: center;
-    -webkit-box-align: center;
-    -moz-box-align: center;
-    box-align: center;
-    color: #ffffff;
-    text-align: center;
-    cursor: pointer;
+    color: #fff;
+    position: relative;
+    .child {
+        position: absolute;
+        top: 10%;
+        left: 5%;
+    }
 }
